crates/plotnik-tests/tests/04-emit/bytecode/linking/missing_unknown_kind.txt
Q = (MISSING xyzzy_not_a_kind) @m
------------------ DIAGNOSTICS -------------------
error: `xyzzy_not_a_kind` is not a valid node kind
 --> query.ptk:1:14
  |
1 | Q = (MISSING xyzzy_not_a_kind) @m
  |              ^^^^^^^^^^^^^^^^
